--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,13 +15,16 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
+        working-directory: study-brew
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+        working-directory: study-brew
       - name: Run Playwright tests
         run: npx playwright test
+        working-directory: study-brew
       - uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: study-brew/playwright-report/
           retention-days: 30
