--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,5 +26,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: study-brew/playwright-report/
+          path: playwright-report/
           retention-days: 30
