--- a/study-brew/package.json
+++ b/study-brew/package.json
@@ -7,6 +7,8 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.16",
     "next": "latest",
     "node": "^21.2.0",
     "react": "^18.2.0",
@@ -16,6 +18,9 @@
     "@playwright/test": "^1.40.1",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "typescript": "5.3.3"
   }
 }
