--- a/study-brew/package.json
+++ b/study-brew/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^10.16.16",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
