--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         working-directory: study-brew
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
