--- a/study-brew/package.json
+++ b/study-brew/package.json
@@ -4,25 +4,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "npx playwright test"
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "date-fns": "^2.30.0",
-    "fs": "^0.0.1-security",
+    "@nextui-org/react": "^2.2.9",
+    "@porscheofficial/cookie-consent-banner-react": "^4.0.1",
+    "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
-    "next": "^13.4.12",
-    "path": "^0.12.7",
+    "next": "latest",
     "react": "^18.2.0",
-    "react-gtm-module": "^2.0.11",
-    "react-native": "^0.72.3",
-    "remark": "^14.0.3",
-    "remark-html": "^15.0.2"
+    "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.36.2"
+    "@playwright/test": "^1.40.1",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "typescript": "5.3.3"
   }
 }
